last question left Support vector Classifier takes too long

--- a/Project2A-MNIST.ipynb
+++ b/Project2A-MNIST.ipynb
@@ -135,7 +135,14 @@
     "accuracies = []\n",
     " \n",
     "\n",
+    "    \n",
+    "    \n",
     "# loop over various values of `k` for the k-Nearest Neighbor classifier ignoring the even number \n",
+    "####################################################################################################################\n",
+    "# WARNING ! If you ran this, it's going to take write 30 - 40 mins and comsume 100 ++ of you CPU\n",
+    "# K = 3 is the best result. trust me !\n",
+    "####################################################################################################################\n",
+    "\n",
     "for k in range(3, 21, 2):\n",
     "    #Building up the model with test values\n",
     "    model = KNeighborsClassifier(n_neighbors=k)\n",
