Before it breaks down

--- a/Project2B-Stock-market-prediction.ipynb
+++ b/Project2B-Stock-market-prediction.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +140,13 @@
     "                                                                        random_state = 0\n",
     "                                                                   )\n",
     "    \n",
-    "    return (train_data, train_target, val_data, val_target, test_data, test_target)\n",
+    "    return (data, target, train_data, train_target, val_data, val_target, test_data, test_target)\n",
     "    \n",
     "    \n",
     "    \n",
-    "(A_train_data, A_train_target, A_val_data, A_val_target, A_test_data, A_test_target) = split_funtion(stockA)    \n",
-    "(B_train_data, B_train_target, B_val_data, B_val_target, B_test_data, B_test_target) = split_funtion(stockB)    \n",
-    "(C_train_data, C_train_target, C_val_data, C_val_target, C_test_data, C_test_target) = split_funtion(stockC)  \n",
+    "(data_A, target_A, A_train_data, A_train_target, A_val_data, A_val_target, A_test_data, A_test_target) = split_funtion(stockA)    \n",
+    "(data_B, target_B, B_train_data, B_train_target, B_val_data, B_val_target, B_test_data, B_test_target) = split_funtion(stockB)    \n",
+    "(data_C, target_C, C_train_data, C_train_target, C_val_data, C_val_target, C_test_data, C_test_target) = split_funtion(stockC)  \n",
     "\n",
     "\n",
     "\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +245,6 @@
     "# clf_lr.fit(train_data,train_labels)\n",
     "# # y_pred_ln = clf_lr.predict(test_data)\n",
     "\n",
-    "\n",
-    "\n",
     "# from sklearn.svm import SVR\n",
     "# clf_svr = SVR(kernel='rbf', C=1e3, gamma=0.1)\n",
     "# clf_svr.fit(train_data, train_labels)\n",
@@ -257,35 +255,6 @@
     "# clf_rf = RandomForestRegressor(n_estimators=100)\n",
     "# clf_rf.fit(train_data, train_labels)\n",
     "# # y_pred_rf = clf_rf.predict(test_data)\n",
-    "\n",
-    "def REPORT_AND_GRAPH(k_best, train_data, train_labels, test_data, test_labels):\n",
-    "    print(\"Using K = %d for our final test \" % k_best)\n",
-    "    model = KNeighborsClassifier(n_neighbors= k_best)\n",
-    "    model.fit(train_data, train_labels)\n",
-    "    predictions = model.predict(test_data)\n",
-    "\n",
-    "    print(\"Done Predicting! Now print the report \")\n",
-    "    report = classification_report(test_labels, predictions, output_dict=True)\n",
-    "    df = pd.DataFrame(report)\n",
-    "    df.drop([\"f1-score\", \"support\"], inplace=True ,axis=0)\n",
-    "    df.drop([\"micro avg\", \"macro avg\", \"weighted avg\"], axis=1, inplace=True)\n",
-    "\n",
-    "    df = (df*100)\n",
-    "    df = df.astype(int)\n",
-    "    df\n",
-    "    \n",
-    "    print(\"Creating confusion metrix\")\n",
-    "    conf_mat = confusion_matrix(test_labels, predictions)\n",
-    "    fig, ax = plt.subplots(1,1, figsize=(5,5))\n",
-    "    # skplt.metrics.plot_confusion_matrix(test_labels, predictions, ax=ax[1])\n",
-    "    sns.heatmap(conf_mat, annot=True, fmt='d', cbar=False, ax=ax)\n",
-    "    ax.set_title('Confusion Metrix')\n",
-    "    ax.set_ylabel(\"Actual\")\n",
-    "    ax.set_xlabel(\"Predicted\")\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    \n",
     "\n",
     "def KNN_FIND_BEST(train_data, train_target, val_data, val_target):\n",
@@ -321,8 +290,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Compare and evaluate the train classifiers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -378,62 +354,36 @@
     }
    ],
    "source": [
+    "def REPORT_AND_GRAPH(k_best, train_data, train_labels, test_data, test_labels):\n",
+    "    print(\"Using K = %d for our final test \" % k_best)\n",
+    "    model = KNeighborsClassifier(n_neighbors= k_best)\n",
+    "    model.fit(train_data, train_labels)\n",
+    "    predictions = model.predict(test_data)\n",
+    "\n",
+    "    print(\"Done Predicting! Now print the report \")\n",
+    "    report = classification_report(test_labels, predictions, output_dict=True)\n",
+    "    df = pd.DataFrame(report)\n",
+    "    df.drop([\"f1-score\", \"support\"], inplace=True ,axis=0)\n",
+    "    df.drop([\"micro avg\", \"macro avg\", \"weighted avg\"], axis=1, inplace=True)\n",
+    "\n",
+    "    df = (df*100)\n",
+    "    df = df.astype(int)\n",
+    "    df\n",
+    "    \n",
+    "    print(\"Creating confusion metrix\")\n",
+    "    conf_mat = confusion_matrix(test_labels, predictions)\n",
+    "    fig, ax = plt.subplots(1,1, figsize=(5,5))\n",
+    "    # skplt.metrics.plot_confusion_matrix(test_labels, predictions, ax=ax[1])\n",
+    "    sns.heatmap(conf_mat, annot=True, fmt='d', cbar=False, ax=ax)\n",
+    "    ax.set_title('Confusion Metrix')\n",
+    "    ax.set_ylabel(\"Actual\")\n",
+    "    ax.set_xlabel(\"Predicted\")\n",
+    "    \n",
+    "    \n",
     "REPORT_AND_GRAPH(k_A, A_train_data, A_train_target, A_test_data, A_test_target)\n",
     "REPORT_AND_GRAPH(k_B, B_train_data, B_train_target, B_test_data, B_test_target)\n",
     "REPORT_AND_GRAPH(k_C, C_train_data, C_train_target, C_test_data, C_test_target)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Compare and evaluate the train classifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 285,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of Linear Regerssion Model: 0.0012815882849989135\n",
-      "Accuracy of SVM-RBF Model: -1.2916911982078791\n",
-      "Accuracy of Random Forest Model: -0.25109002100730615\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(\"Accuracy of Linear Regerssion Model:\",clf_lr.score(val_data,val_labels))\n",
-    "print(\"Accuracy of SVM-RBF Model:\",clf_svr.score(val_data,val_labels))\n",
-    "print(\"Accuracy of Random Forest Model:\",clf_rf.score(val_data,val_labels))\n",
-    "\n",
-    "s\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -446,11 +396,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 302,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (5199,2) (1734,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-302-da7cfd00eb47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmyList\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mknn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_neighbors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mknn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA_train_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mA_val_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mA_train_target\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mA_val_target\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'accuracy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mcv_scores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv_scores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5199,2) (1734,2) "
+     ]
+    }
+   ],
    "source": [
-    "# provide cross validation results"
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# creating odd list of K for KNN\n",
+    "myList = list(range(1,21, 2))\n",
+    "# empty list that will hold cv scores\n",
+    "cv_scores = []\n",
+    "\n",
+    "# perform 10-fold cross validation\n",
+    "for k in myList:\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "    scores = cross_val_score(knn, A_train_data[:,:] + A_val_data[:,:] , A_train_target[:] + A_val_target[:], cv=10, scoring='accuracy')\n",
+    "    cv_scores.append(scores.mean())\n",
+    "print(cv_scores)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# changing to misclassification error\n",
+    "MSE = [1 - x for x in cv_scores]\n",
+    "\n",
+    "# determining best k\n",
+    "optimal_k = myList[MSE.index(min(MSE))]\n",
+    "print (\"The optimal number of neighbors is %d\" % optimal_k)\n",
+    "\n",
+    "# plot misclassification error vs k\n",
+    "plt.plot(myList, MSE)\n",
+    "plt.xlabel('Number of Neighbors K')\n",
+    "plt.ylabel('Misclassification Error')\n"
    ]
   },
   {
